syntax = "proto3";

message TagAtomicUnion {
    repeated TagAtomicUnion.Type value = 1;
    message Type {
        oneof value {
            string v1 = 1
            double v2 = 2
        }
    }
}